# LabelPigeon

./: README.md  pyproject.toml  run_llmmt.py
configs/: nllb.yaml
configs/eval/: direct_eval.yaml  gemma_direct_eval.yaml  gen_metrics.yaml  lp_direct_eval.yaml
configs/training/: alma.yaml  xalma.yaml
dataset_converters/: mlqa_convert.py  salesforce_xml_convert.py  xquad_convert.py
evals/: direct_eval.py  generate_metrics_direct.py  translation_eval.py
evals/dataset_lp/: corefud_translate.py  dataset_utils.py  squad_translate.py  uner_translate.py
utils/: arguments.py  utils.py
